# global_registration3d

./: .gitignore  .gitmodules  clean-init.sh  heat_overview_plot.py  init.sh  mulran_script.sh  oxford_script.sh  rebuild_gmor_trde.sh  rebuild_kiss_cpp.sh  rebuild_kiss_examples.sh  rebuild_kiss_matcher.sh  rebuild_mac.sh  rebuild_macpp.sh  rebuild_quatro.sh  rebuild_teaser.sh  req.txt  start.sh
MAC/: build.sh
MAC/demo/result/: corr.txt  est.txt  selected.txt
MAC/src/: CMakeLists_pybind.txt  Eva.h  PCR.cpp  funcs.cpp  mac_bind.cpp  readme.md
MAC/src/pybind/: CMakeLists.txt
STD_REG/: CMakeLists.txt
STD_REG/include/: STDesc.h
STD_REG/src/: STDesc.cpp
STD_REG/src/pybind/: CMakeLists.txt  std_bind.cpp
adaptive/: CMakeLists.txt  adaptive_bind.cpp  adaptive_lib.cpp  adaptive_lib.h  build.sh  main.cpp
eval/: analyze_sr_vs_gt.py  dataset_loader.py  example.py  helpers.py  helpers_graph.py  reg_pipe.py  req2.txt  sweep_mac.py  test.py  test_args.py  test_helper.py  test_utils.py
eval/config/: KITTI.json  MulRan.json  NCLT.json  NCLT2.json  config_NCLT.json  sensors.json  seq_NCLT.json
eval/scripts/: aggregate_detail.py  bench_feat.sh  benchmark_correspondence_backends.py  generate_scan2scan_pairs.py  scan2map.sh  scan2scan-macpp.sh  scan2scan-quatro.sh  sweep_mac_params.sh  sweep_methods.sh  sweep_methods_sr_gt_kitti_mulran.sh  sweep_quatro_sr_gt.sh  sweep_reg_methods.lib.sh  sweep_reg_methods.sh  sweep_reg_methods2.sh  sweep_sequences.sh  sweep_sr_gt_kitti.sh  sweep_voxel.sh  test.sh
plot/: adaptive.py  adaptive2.py  corr_from_sr.py  downsampled.py  feat_research.py  i18n.py  i18n_plot_labels.json  plot_downsampled.py  plot_feat_research.py  plot_from_sweep.py  rte_rre_from_sr.py  timings_from_sr.py  tuning_grid_table.py  utils.py
rebuild/: gmor_trde.sh  kiss_cpp.sh  kiss_examples.sh  kiss_matcher.sh  mac.sh  macpp.sh  quatro.sh  std.sh  teaser.sh
visualize/: ellipsoid_iridescence.py  generate_seq.py  heat_demo.py  heat_overview_plot.py  plot_sr_vs_gt.py  preprocessing_setup.py  preview_gt.py  test_ellipsoid_primitive.py  velodyne_iridescence.py  velodyne_open3d.py
